skin/adminhtml/openmage/default/scss/override.scss
/* ... */
strong {
  font-weight: 600;
}

b {
  font-weight: 600;
}

small {
  font-size: 12px;
  color: $color_dark_grey;
}

.wrapper {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

.header-top {
  @extend %extend_2;
  border: 0;
}

#nav {
  @extend %extend_2;
}

.middle {
  @extend %extend_2;
  background: $color_wild_sand_approx;
  flex-grow: 1;
}

.footer-content {
  @extend %extend_2;
}

.content-header-floating {
  opacity: 0.9;
  border-bottom: solid 1px $color_silver_approx;

  .content-header {
    @extend %extend_2;
  }

  h3 {
    font-size: 18px;
  }

  td {
    padding-right: 0;
  }

  .form-buttons {
    padding-right: 0;
  }
}

.content-header {
  @extend %extend_3;
  margin-bottom: 0;
  padding-bottom: 0;
  h3 {
    @extend %extend_3;
    margin: 0 0.3em 0.3em;
    line-height: 32px;
  }
}

.dashboard-container {
  border: none;
}

.columns {
  background: none;
}

.switcher {
  background: none;
  padding: 0 0 10px;
  border: none;
}

.entry-edit {
  margin-top: 10px;

  .entry-edit-head {
    @extend %extend_4;

    h4 {
      color: $color_dark_grey;
      line-height: 32px;
      font-size: 16px;
      font-weight: 300;
    }

    .tools {
      line-height: 32px;

      a:hover {
        text-decoration: none;
      }
    }

    strong {
      @extend %extend_10;
    }

    a {
      @extend %extend_10;
      padding: 4px 16px;

      &:focus:not(:active) {
        outline-offset: -4px;
      }
    }

    button:not(:first-of-type) {
      margin-left: 5px;
    }

    .icon-copy {
      width: 16px;
      height: 16px;
      margin: 8px 0 0 5px;
      filter: revert;
      float: right;
    }
  }

  fieldset {
    @extend %extend_5;
  }

  .fieldset {
    @extend %extend_5;
  }
}

.box {
  @extend %extend_5;
}

.grid {
  table {
    border: 1px solid $color_alto_approx;
    border-collapse: collapse;

    &.border {
      border: 1px solid $color_alto_approx;

      tfoot tr td {
        background: $white !important;
      }
    }

    td {
      border: 1px solid $color_alto_approx;
      background: $white;
      padding: 5px;

      &.first {
        border-right: 1px solid $color_alto_approx;
      }

      &.last {
        border-right: 1px solid $color_alto_approx;
      }
    }

    tfoot tr td {
      border: 1px solid $color_alto_approx;
      background: $white;
    }

    tbody tr {
      &.selected td {
        background: $openmage_blue_light;
      }

      &:hover td {
        background: $openmage_blue_light;
      }

      &:nth-child(odd):hover td {
        background: $openmage_blue_light;
      }
    }
  }

  tr {
    &.filter {
      background: $white !important;

      th {
        border: 1px solid $color_alto_approx;
        border-top: 0;

        &.sorted {
          background: darken($white, 3%) !important;
        }
      }

      .range {
        .range-line {
          width: 125px;
        }

        &.filter-range .range-line {
          width: initial;
        }

        .label {
          font-weight: 400;
          width: 40px;
          padding: 4px;
        }

        &.filter-range .label {
          display: none;
        }

        div.date {
          min-width: 140px;
        }

        input, select {
          width: 75px !important;
        }

        select {
          float: none;
        }
      }

      .date img {
        @include replaceImage(icon-calendar($openmage_blue),17px,17px);
        margin-top: 5px;
      }
    }

    &.headings {
      background: $openmage_blue_gray;
      border: 1px solid $openmage_blue_gray;

      th {
        padding: 4px;
        font-size: 12px;
        vertical-align: middle;
        color: $white;
        font-weight: 400;

        a {
          color: $white;
          font-weight: 400;

          &:hover {
            color: $color_alto_approx;
          }

          &:focus:not(:active) {
            outline-offset: 0;
            outline-color: white;
          }

          &.sort-arrow-desc {
            @extend %extend_6;

            span.sort-title {
              background: none;

              &:after {
                @extend %extend_7;
                border-width: 6px 5px 0 5px;
                border-color: $color_alto_approx transparent transparent transparent;
              }
            }
          }

          &.sort-arrow-asc {
            @extend %extend_6;

            span.sort-title {
              background: none;

              &:after {
                @extend %extend_7;
                border-width: 0 5px 6px 5px;
                border-color: transparent transparent $color_alto_approx transparent;
              }
            }
          }
        }

        &.no-link {
          color: $white;
          padding: 4px;
        }
      }
    }

    &.even {
      td {
        background: $color_gallery_approx;
      }

      tr td {
        background: $color_gallery_approx;
      }
    }
  }

  tbody {
    &.even tr td {
      background: $color_gallery_approx !important;
    }

    &.odd tr td {
      background: $color_wild_sand_approx !important;
    }

    tr.even td.sorted {
      background: darken($color_gallery_approx, 3%) !important;
    }

    tr.odd td.sorted {
      background: darken($white, 3%) !important;
    }

    tr.selected td.sorted {
      background: darken($openmage_blue_light, 3%) !important;
    }
  }

  td input.input-text {
    min-width: 80px;
  }
}

.header {
  background: $openmage_base_blue;
  position: relative;
}

.header-top {
  border-bottom: none !important;
  height: 10px;
  .logo {
    position: absolute;
    display: block;
    top: 8px;
    left: 0;
    margin: 0;
    height: 40px;
    padding: 0 27px;
    svg {
      height: 40px;
      width: auto;
    }
  }
}
/* ... */

